<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>dialogEditIP</class>
 <widget class="QDialog" name="dialogEditIP">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>413</width>
    <height>327</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Repository Configuration</string>
  </property>
  <property name="windowIcon">
   <iconset>
    <normaloff>:/preferences-system.png</normaloff>:/preferences-system.png</iconset>
  </property>
  <layout class="QGridLayout" name="gridLayout_2">
   <item row="0" column="0">
    <widget class="QGroupBox" name="groupBox">
     <property name="title">
      <string>Jail IP Addresses</string>
     </property>
     <layout class="QGridLayout" name="gridLayout">
      <item row="0" column="0">
       <widget class="QListWidget" name="listIP"/>
      </item>
      <item row="1" column="0" colspan="2">
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <spacer name="horizontalSpacer_2">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
          <property name="sizeHint" stdset="0">
           <size>
            <width>40</width>
            <height>20</height>
           </size>
          </property>
         </spacer>
        </item>
        <item>
         <widget class="QPushButton" name="pushAdd">
          <property name="text">
           <string>&amp;Add</string>
          </property>
          <property name="icon">
           <iconset>
            <normaloff>:/add.png</normaloff>:/add.png</iconset>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="pushRemove">
          <property name="text">
           <string>&amp;Remove</string>
          </property>
          <property name="icon">
           <iconset>
            <normaloff>:/remove.png</normaloff>:/remove.png</iconset>
          </property>
         </widget>
        </item>
       </layout>
      </item>
     </layout>
    </widget>
   </item>
   <item row="1" column="0">
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QPushButton" name="pushSave">
       <property name="text">
        <string>&amp;Save</string>
       </property>
       <property name="icon">
        <iconset>
         <normaloff>:/preferences-system.png</normaloff>:/preferences-system.png</iconset>
       </property>
      </widget>
     </item>
     <item>
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QPushButton" name="pushCancel">
       <property name="text">
        <string>&amp;Cancel</string>
       </property>
       <property name="icon">
        <iconset>
         <normaloff>:/dialog-cancel.png</normaloff>:/dialog-cancel.png</iconset>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources>
  <include location="warden.qrc"/>
 </resources>
 <connections/>
</ui>
